# docs/swagger.yaml
@@ -65,6 +65,108 @@ components:
         video:
           type: boolean
           example: false
+    SeriesObject:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1396
+        name:
+          type: string
+          example: Пуститися берега
+        original_name:
+          type: string
+          example: Breaking Bad
+        overview:
+          type: string
+          example: Шкільний учитель хімії Волтер Вайт дізнається, що хворий на рак...
+        poster_path:
+          type: string
+          example: /oVLZtMcIjouOXBA2nz9tJHqrK4A.jpg
+        backdrop_path:
+          type: string
+          example: /tsRy63Mu5cu8etL1X7ZLyf7UP1M.jpg
+        first_air_date:
+          type: string
+          format: date
+          example: 2008-01-20
+        vote_average:
+          type: number
+          format: float
+          example: 8.936
+        vote_count:
+          type: integer
+          example: 17141
+        popularity:
+          type: number
+          format: float
+          example: 124.3932
+        genre_ids:
+          type: array
+          items:
+            type: integer
+          example: [ 18, 80 ]
+        adult:
+          type: boolean
+          example: false
+        original_language:
+          type: string
+          example: en
+        origin_country:
+          type: array
+          items:
+            type: string
+          example: [ "US" ]
+    AnimationObject:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 129
+        title:
+          type: string
+          example: Віднесені привидами
+        original_title:
+          type: string
+          example: 千と千尋の神隠し
+        overview:
+          type: string
+          example: Маленька Чіхіро разом з мамою і татом переїздять в новий будинок. Заблукавши по дорозі, вони опиняються в дивному пустинному місті...
+        poster_path:
+          type: string
+          example: /m8qLMkpEwfgUdi2o1S96N1dIbkJ.jpg
+        backdrop_path:
+          type: string
+          example: /ukfI9QkU1aIhOhKXYWE9n3z1mFR.jpg
+        release_date:
+          type: string
+          format: date
+          example: 2001-07-20
+        vote_average:
+          type: number
+          format: float
+          example: 8.534
+        vote_count:
+          type: integer
+          example: 17985
+        popularity:
+          type: number
+          format: float
+          example: 20.4296
+        genre_ids:
+          type: array
+          items:
+            type: integer
+          example: [ 16, 10751, 14 ]
+        adult:
+          type: boolean
+          example: false
+        original_language:
+          type: string
+          example: ja
+        video:
+          type: boolean
+          example: false
     ExtendedMovieObject:
       type: object
       properties:
@@ -256,11 +358,41 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/MovieObject'
+    DBMovieObject:
+      type: object
+      properties:
+        _id:
+          type: string
+          example: 699c2f4c41fdc4732f8f8b48
+        genres:
+          type: array
+          items:
+            type: string
+          example: [ "Фантастика", "Бойовик", "Трилер" ]
+        posterPath:
+          type: string
+          example: /pyok1kZJCfyuFapYXzHcy7BLlQa.jpg
+        ratingsAverage:
+          type: number
+          format: float
+          example: 0
+        releaseDate:
+          type: string
+          format: date-time
+          example: 2026-01-20T00:00:00.000Z
+        runtime:
+          type: integer
+          example: 100
+        title:
+          type: string
+          example: Милосердя
 tags:
   - name: Users
     description: User management
   - name: TMDB
     description: TMDB Movie management
+  - name: Activity
+    description: User activity management (likes, views)
 paths:
   /api/v1/users/auth/google:
     get:
@@ -889,6 +1021,91 @@ paths:
                               $ref: '#/components/schemas/MovieObject'
         "400":
           description: Bad Request
+  /api/v1/tmdb/topRatedSeries:
+    get:
+      summary: Отримати серіали з найвищим рейтингом
+      description: Повертає список топових серіалів з TMDB. Підтримує пагінацію. Результати можуть кешуватися.
+      tags: [ TMDB ]
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+          description: Номер сторінки для пагінації
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  source:
+                    type: string
+                    description: Вказує на джерело даних (присутнє, якщо дані завантажено з кешу)
+                    example: cache
+                  data:
+                    type: object
+                    properties:
+                      series:
+                        type: object
+                        properties:
+                          page:
+                            type: integer
+                            example: 1
+                          results:
+                            type: array
+                            items:
+                              $ref: '#/components/schemas/SeriesObject'
+        "400":
+          description: Bad Request
+
+  /api/v1/tmdb/topRatedAnimations:
+    get:
+      summary: Отримати анімаційні фільми з найвищим рейтингом
+      description: Повертає список топових анімацій (мультфільмів) з TMDB. Підтримує пагінацію. Результати можуть кешуватися.
+      tags: [ TMDB ]
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+          description: Номер сторінки для пагінації
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  source:
+                    type: string
+                    description: Вказує на джерело даних (присутнє, якщо дані завантажено з кешу)
+                    example: cache
+                  data:
+                    type: object
+                    properties:
+                      animations:
+                        type: object
+                        properties:
+                          page:
+                            type: integer
+                            example: 1
+                          results:
+                            type: array
+                            items:
+                              $ref: '#/components/schemas/AnimationObject'
+        "400":
+          description: Bad Request
   /api/v1/tmdb/upcoming:
     get:
       summary: Отримати майбутні прем'єри фільмів
@@ -1137,3 +1354,151 @@ paths:
           description: Bad Request
         "404":
           description: Not Found
+
+  /api/v1/activity:
+    post:
+      summary: Вподобати або зберегти фільм
+      description: Дозволяє користувачу відзначити фільм як вподобаний або збережений для перегляду пізніше. Вимагає авторизації.
+      tags: [ Activity ]
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - tmdbId
+                - activityType
+              properties:
+                tmdbId:
+                  type: string
+                  example: 1236153
+                activityType:
+                  type: string
+                  enum: [ liked, watched ]
+                  example: liked
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  data:
+                    type: object
+                    properties:
+                      isActive:
+                        type: boolean
+                        example: true
+                      message:
+                        type: string
+                        example: Movie added to liked list
+                      likesCount:
+                        type: integer
+                        example: 1
+                      watchesCount:
+                        type: integer
+                        example: 0
+        "404":
+          description: Not Found
+        "400":
+          description: Bad Request
+
+    get:
+      summary: Отримати вподобані та збережені фільми користувача
+      description: Повертає список фільмів, які користувач відзначив як вподобані або збережені для перегляду. Вимагає авторизації.
+      tags: [ Activity ]
+      security:
+        - bearerAuth: [ ]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  results:
+                    type: integer
+                    example: 2
+                  data:
+                    type: object
+                    properties:
+                      movies:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            _id:
+                              type: string
+                              example: 60d0fe4f5311236168a109ca
+                            user:
+                              type: string
+                              example: 60d0fe4f5311236168a109ca
+                            movie:
+                              type: object
+                              $ref: '#/components/schemas/DBMovieObject'
+                            activityType:
+                              type: string
+                              enum: [ liked, watched ]
+                              example: liked
+                            createdAt:
+                              type: string
+                              format: date-time
+                              example: 2026-01-01T12:00:00.000Z
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+
+  /api/v1/activity/status/{id}:
+    get:
+      summary: Перевірити статус вподобання або збереження фільму
+      description: Дозволяє користувачу перевірити, чи відзначив він певний фільм як вподобаний або збережений для перегляду. Вимагає авторизації.
+      tags: [ Activity ]
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            example: 1236153
+          description: TMDB ID фільму для перевірки статусу
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  data:
+                    type: object
+                    properties:
+                      liked:
+                        type: boolean
+                        example: true
+                      watched:
+                        type: boolean
+                        example: false
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+
