# routes/tmdbRoutes.js
@@ -3,15 +3,10 @@ const tmdbController = require('../controllers/tmdbController');
 
 const router = express.Router();
 
-/**
- * @swagger
- * tags:
- *   name: TMDB
- *   description: TMDB Movie management
- */
-
 router.get('/genres', tmdbController.getMovieGenres);
 router.get('/topRated', tmdbController.getTopRatedMovies);
+router.get('/topRatedSeries', tmdbController.getTopRatedSeries);
+router.get('/topRatedAnimations', tmdbController.getTopRatedAnimations);
 router.get('/upcoming', tmdbController.getUpcomingMovies);
 router.get('/search', tmdbController.searchMovies);
 router.get('/nowPlaying', tmdbController.getNowPlayingMovies);
